--- a/SegundaEva/Biblioteca/app/src/main/AndroidManifest.xml
+++ b/SegundaEva/Biblioteca/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.Biblioteca"
         tools:targetApi="31">
         <activity
+            android:name=".Importar"
+            android:exported="false" />
+        <activity
+            android:name=".SecondaryActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
